applied collapsable fact notes several bug fixes
git-svn-id: svn://svn.webtrees.net/trunk@533 4201c862-f99b-1943-94d0-25fd05010cbc

--- a/phpGedView/themes/minimal/style.css
+++ b/phpGedView/themes/minimal/style.css
@@ -983,3 +983,7 @@ table.center{
 	-moz-border-radius-topleft: 0.6em;
 	-moz-border-radius-topright: 0.6em;
 }
+
+.note_details {
+	display: none;
+}
