--- a/phpGedView/themes/standard/style.css
+++ b/phpGedView/themes/standard/style.css
@@ -971,3 +971,7 @@ table.center {
 	-moz-border-radius-topleft: 0.6em;
 	-moz-border-radius-topright: 0.6em;
 }
+
+.note_details {
+	display: none;
+}
